clusters/srvapplis/platform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: satmonitor-platform
  namespace: satmonitor-platform
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: satmonitor.local
      http:
        paths:
          - path: /sonar
            pathType: Prefix
            backend:
              service:
                name: sonarqube
                port:
                  number: 9000
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
